src/styles/scss/utils/_mixins.scss
@mixin button {
  color: var(--btn-font-color);
  background-color: var(--btn-background);
  font-family: var(--btn-font-family);
  font-size: var(--btn-font-size);
  padding: var(--btn-padding);
  border: var(--btn-border);
  border-radius: var(--btn-radius);
  box-sizing: border-box;
  text-decoration: none;
  cursor: pointer;
}

@mixin navbar {
  display: var(--nav-display) !important;
  grid-auto-flow: var(--nav-flow);
  grid-auto-columns: var(--nav-flow-size);
  background: var(--nav-background) !important;
  margin-inline: 1rem;
}

@mixin nav-element-wrapper {
  display: flex;
  flex-direction: var(--nav-el-wrapper-direction);
  justify-content: var(--nav-el-wrapper-justify);
  align-items: var(--nav-el-wrapper-align);
  gap: var(--nav-el-wrapper-gap);
  margin: var(--nav-el-wrapper-margin);
  container-type: inline-size;
}

@mixin links {
  text-decoration: none;
  font-size: max(1rem, 3cqi);
  color: var(--color-primary);
  transition: color 0.6s ease;
  &:is(:visited, :focus) {
    color: var(--color-primary);
  }
  &:hover {
    color: var(--color-secondary);
  }
}

@mixin auto-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 6rem 1rem;

  @media (max-width: 800px) {
    grid-template-columns: repeat(2, 1fr);
    gap: 4rem 1rem;
  }
  @media (max-width: 470px) {
    grid-template-columns: repeat(1, 1fr);
    justify-items: center;
    gap: 3rem 0;
  }
}

